{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 9,
  "lineage": "8f2aa6ce-7bbe-af1d-92c6-01e5a5285662",
  "resources": [
    {
      "module": "module.aws_foundation",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060284946135:internet-gateway/igw-0a3d1d7a23a25c8b7",
            "id": "igw-0a3d1d7a23a25c8b7",
            "owner_id": "060284946135",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0cb5a9c0e330bfca2"
          },
          "dependencies": [
            "module.aws_foundation.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_foundation",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3d1d7a23a25c8b7",
            "id": "r-rtb-07fc18b83606c08f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07fc18b83606c08f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_foundation.aws_internet_gateway.gw",
            "module.aws_foundation.aws_route_table.public",
            "module.aws_foundation.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_foundation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060284946135:route-table/rtb-07fc18b83606c08f7",
            "id": "rtb-07fc18b83606c08f7",
            "owner_id": "060284946135",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb5a9c0e330bfca2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_foundation.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_foundation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a79acbe67d6691b",
            "region": "us-east-1",
            "route_table_id": "rtb-07fc18b83606c08f7",
            "subnet_id": "subnet-0dea3d81cbabd575e"
          },
          "dependencies": [
            "module.aws_foundation.aws_route_table.public",
            "module.aws_foundation.aws_subnet.public",
            "module.aws_foundation.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd321f2af553f9d7",
            "region": "us-east-1",
            "route_table_id": "rtb-07fc18b83606c08f7",
            "subnet_id": "subnet-0203e6cb056d03714"
          },
          "dependencies": [
            "module.aws_foundation.aws_route_table.public",
            "module.aws_foundation.aws_subnet.public",
            "module.aws_foundation.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_foundation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060284946135:subnet/subnet-0dea3d81cbabd575e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea3d81cbabd575e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060284946135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-0cb5a9c0e330bfca2"
          },
          "dependencies": [
            "module.aws_foundation.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060284946135:subnet/subnet-0203e6cb056d03714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0203e6cb056d03714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060284946135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-0cb5a9c0e330bfca2"
          },
          "dependencies": [
            "module.aws_foundation.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_foundation",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060284946135:vpc/vpc-0cb5a9c0e330bfca2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c79b3ab1000bd43d",
            "default_route_table_id": "rtb-075645264ae5cc1af",
            "default_security_group_id": "sg-0251450a74a6cda3b",
            "dhcp_options_id": "dopt-07f34623e35441bb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb5a9c0e330bfca2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075645264ae5cc1af",
            "owner_id": "060284946135",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}